--- a/FashionReport/FashionReport.csproj
+++ b/FashionReport/FashionReport.csproj
@@ -10,6 +10,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Week.cs" />
+    <Compile Remove="Windows\ConfigWindow.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Include="..\Data\Wolf Paw.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <Visible>false</Visible>
